# EndlessOpt

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
processoptimize/: build.py  main.py
src/: main.rs
src/config/: mod.rs
src/gui/: app.rs  mod.rs  tabs.rs
src/memory/: mod.rs  monitor.rs  optimizer.rs
src/process/: gamemode.rs  manager.rs  mod.rs
src/utils/: cleaner.rs
