[package]
name = "endlessopt"
version = "0.1.0"
edition = "2021"
authors = ["EndlessOpt Contributors"]
description = "System optimization tool for Windows"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
]}
eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
